<resources>
    <string name="app_name">Semester Project</string>
    <string name="button">Begin Game</string>
    <string name="button2">Settings</string>
    <string name="button3">Help</string>
    <string name="coins">Coins</string>
    <string name="back">Back</string>
    <string name="help">\u2022 How to Play: Move phone left and right to jump up on the planets!</string>
    <string name="pause">Pause</string>
    <string name="quit">Quit</string>
    <string name="resume">Resume</string>
    <string name="more">More+</string>
    <string name="music">Music</string>
    <string name="on_off">On or Off</string>
    <string name="volume">Volume</string>
    <string name="rodger">Rodger the Alien</string>
    <string name="al">Al the Aien</string>
    <string name="price_of_rodger">200 Coins</string>
    <string name="price_of_al">100 Coins</string>
    <string name="next_page">Next Page</string>
    <string name="buy">Buy</string>
    <string name="previous_page">Previous Page</string>
    <string name="phil">Phil the Alien</string>
    <string name="astronaut">Alfred the Astronaut</string>
    <string name="price_of_phil">50 coins</string>
    <string name="price_of_alfred">125 coins</string>
    <string name="home">Home</string>
</resources>
